--- a/PlatziVideo/src/assets/styles/App.scss
+++ b/PlatziVideo/src/assets/styles/App.scss
@@ -1,5 +1,17 @@
-body{
-    margin: 0px;
-    background-color: red;
-    color: white;
+@import './Vars.scss';
+@import './Media.scss';
+
+body {
+    margin: 0;
+    font-family: $theme-font;
+    background: $main-color;
+  }
+  
+* {
+box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
